--- a/public/task-manager-provider.html
+++ b/public/task-manager-provider.html
@@ -29,16 +29,24 @@
     <!-- Font Awesome Icons -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/js/all.min.js"></script>
 
+    <!-- <script>//email passing
+        $(document).ready(function () {
 
-    <script>
+            let user = localStorage.getItem("user");
+             //alert(user);
+            //$("#txtEmail").val(user);
+        })
+    </script> -->
+
+    <script> //angular email task fetch call 
         var module = angular.module("myModule", []);
         var controller = module.controller("myController", function ($scope, $http) {
 
 
             $scope.respJsonAry = [];
             $scope.doFetch = function (selEmail) {
-                //let url = "/doFetchTask?kuchEmail="+selEmail;
-                let url = "/doFetchTask";
+                let url = "/doFetchTask?kuchEmail=" + localStorage.getItem("user");
+                // let url = "/doFetchTask";
 
                 $http.get(url).then(success, errors);
 
@@ -56,10 +64,10 @@
                     return;
                 // alert(emailid);
                 //let url="/angular-delete?emailkuch="+selemailid+"&pwd="+selemailid;
-                let url = "/doDelete?rid="+rid;
+                let url = "/doDelete?rid=" + rid;
                 $http.get(url).then(success, errors);
                 function success(response) {
-                    alert(response.data);
+                    snackFunction();
                     $scope.doFetch();
                 }
                 function errors(response) {
@@ -69,6 +77,20 @@
 
         })
     </script>
+
+    <script>
+        function snackFunction() {
+            // Get the snackbar DIV
+            var x = document.getElementById("snackbar");
+
+            // Add the "show" class to DIV
+            x.className = "show";
+
+            // After 4 seconds, remove the show class from DIV
+            setTimeout(function () { x.className = x.className.replace("show", ""); }, 3000);
+        }
+    </script>
+
     <style>
         body {
             font-family: 'Roboto Slab', sans-serif;
@@ -90,10 +112,11 @@
             margin-right: auto;
         }
 
-        th, td {
+        th,
+        td {
             text-align: center;
         }
-        
+
 
         tbody tr:hover {
             background-color: #e9ecef;
@@ -106,17 +129,117 @@
         a:hover {
             color: #bd2130;
         }
+
+        .nav-item {
+            font-size: large;
+            font-weight: bold;
+        }
+
+        .nav-link {
+            color: #fff;
+        }
+
+        .nav-link:hover {
+            color: #459af4;
+        }
+
+        /* The snackbar - position it at the bottom and in the middle of the screen */
+        #snackbar {
+            visibility: hidden;
+            /* Hidden by default. Visible on click */
+            min-width: 250px;
+            /* Set a default minimum width */
+            margin-left: -125px;
+            /* Divide value of min-width by 2 */
+            background-color: #333;
+            /* Black background color */
+            color: #fff;
+            /* White text color */
+            text-align: center;
+            /* Centered text */
+            border-radius: 2px;
+            /* Rounded borders */
+            padding: 16px;
+            /* Padding */
+            position: fixed;
+            /* Sit on top of the screen */
+            z-index: 1;
+            /* Add a z-index if needed */
+            left: 50%;
+            /* Center the snackbar */
+            top: 30px;
+            /* 30px from the bottom */
+        }
+
+        /* Show the snackbar when clicking on a button (class added with JavaScript) */
+        #snackbar.show {
+            visibility: visible;
+            /* Show the snackbar */
+            /* Add animation: Take 0.5 seconds to fade in and out the snackbar.
+  However, delay the fade out process for 2.5 seconds */
+            -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
+            animation: fadein 0.5s, fadeout 0.5s 2.5s;
+        }
+
+        /* Animations to fade the snackbar in and out */
+        @-webkit-keyframes fadein {
+            from {
+                top: 0;
+                opacity: 0;
+            }
+
+            to {
+                top: 30px;
+                opacity: 1;
+            }
+        }
+
+        @keyframes fadein {
+            from {
+                top: 0;
+                opacity: 0;
+            }
+
+            to {
+                top: 30px;
+                opacity: 1;
+            }
+        }
+
+        @-webkit-keyframes fadeout {
+            from {
+                top: 30px;
+                opacity: 1;
+            }
+
+            to {
+                top: 0;
+                opacity: 0;
+            }
+        }
+
+        @keyframes fadeout {
+            from {
+                top: 30px;
+                opacity: 1;
+            }
+
+            to {
+                top: 0;
+                opacity: 0;
+            }
+        }
     </style>
+    <link rel="icon" type="png" href="/assets/projectLogo2.png">
 </head>
 
 <body ng-app="myModule" ng-controller="myController" ng-init="doFetch()">
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div id="snackbar">Deleted Successfully <i class="fa-solid fa-check" style="color: green;"></i></div>
+    <nav class="navbar navbar-expand-lg py-0" style="background-color: #004aad">
         <div class="container-fluid">
             <a class="navbar-brand" href="provider-dash.html">
-                <img src="/images/projectLogo.png" alt="Logo" width="30" height="30"
-                    class="d-inline-block align-text-top">
-                <span style="color:#0072a9">Maid </span><span style="color:#01a2e9">for </span><span
-                    style="color:#0072a9">Each Other</span></a>
+                <img src="/assets/Full logo.png" alt="Logo" height="50" class="d-inline-block align-text-top" />
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -125,73 +248,68 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link" aria-current="page" href="provider-dash.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                            aria-expanded="false">
-                            Dropdown
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li>
-                                <hr class="dropdown-divider">
-                            </li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
-                        </ul>
+                        <a class="nav-link" href="/provider-profile.html">Profile</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+                        <a class="nav-link" href="/find-work.html">Find Work</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/task-manager-provider.html">Task Manager</a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="/provider-contactUs.html">Contact Us</a>
                     </li>
                 </ul>
-
             </div>
         </div>
     </nav>
     <br>
     <div class="row-mt-4">
         <center>
-            <h2>Task-Manager</h2>
+            <img src="/assets/taskManager.png" width="300rem" alt="">
         </center>
     </div>
-    <div class="row">
-        <center>
-            <table class="table table-hover">
-                <thead>
-                    <tr>
-                        <th style="background-color: #2a7ab0; color: white; "scope="col">#</th>
-                        <th style="background-color: #2a7ab0; color: white" scope="col">Email Id</th>
-                        <th style="background-color: #2a7ab0; color: white" scope="col">Category</th>
-                        <th style="background-color: #2a7ab0; color: white" scope="col">Address</th>
-                        <th style="background-color: #2a7ab0; color: white" scope="col">City</th>
-                        <th style="background-color: #2a7ab0; color: white" scope="col">State</th>
-                        <th style="background-color: #2a7ab0; color: white" scope="col">Upto</th>
-                        <th style="background-color: #2a7ab0; color: white" scope="col">Other Info</th>
-                        <th style="background-color: #2a7ab0; color: white"></th>
 
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr ng-repeat="obj in respJsonAry">
-                        <th>{{$index+1}}</th>
-                        <td>{{obj.emailid}}</td>
-                        <td>{{obj.category}}</td>
-                        <td>{{obj.address}}</td>
-                        <td>{{obj.city}}</td>
-                        <td>{{obj.state}}</td>
-                        <td>{{obj.upto}}</td>
-                        <td>{{obj.otherinfo}}</td>
-                        <th><a href="#" ng-click="doDelete(obj.rid)" style="text-decoration: none;"><i
-                                    style="font-size:24px" class="fa"> &#xf00d; </i></a></th>
-                    </tr>
-                </tbody>
-            </table>
-        </center>
-    </div>
+    <center>
+        <div class="container">
+            <div class="table-responsive">
+                <table class="table table-hover">
+                    <thead>
+                        <tr>
+                            <th style="background-color: #004aad; color: white; " scope="col">#</th>
+                            <th style="background-color: #004aad; color: white" scope="col">Email Id</th>
+                            <th style="background-color: #004aad; color: white" scope="col">Category</th>
+                            <th style="background-color: #004aad; color: white" scope="col">Address</th>
+                            <th style="background-color: #004aad; color: white" scope="col">City</th>
+                            <th style="background-color: #004aad; color: white" scope="col">State</th>
+                            <th style="background-color: #004aad; color: white" scope="col">Upto</th>
+                            <th style="background-color: #004aad; color: white">Other Info</th>
+                            <th style="background-color: #004aad; color: white" scope="col">Delete</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr ng-repeat="obj in respJsonAry">
+                            <th>{{$index+1}}</th>
+                            <td>{{obj.emailid}}</td>
+                            <td>{{obj.category}}</td>
+                            <td>{{obj.address}}</td>
+                            <td>{{obj.city}}</td>
+                            <td>{{obj.state}}</td>
+                            <td>{{obj.upto}}</td>
+                            <td>{{obj.otherinfo}}</td>
+                            <th><a href="#" ng-click="doDelete(obj.rid)" style="text-decoration: none;"><i
+                                        style="font-size:24px" class="fa"> &#xf00d; </i></a></th>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </center>
+
 </body>
 
 </html>
